# cli.xether

./: .gitignore  IMPROVEMENTS_SUMMARY.md  README.md  TASKS.md  pyproject.toml
.github/workflows/: mirror.yaml
src/xether_cli/: main.py
src/xether_cli/api/: client.py
src/xether_cli/commands/: artifact.py  auth.py  config.py  dataset.py  pipeline.py  project.py  team.py
src/xether_cli/core/: config.py  validation.py
tests/: test_api_client.py  test_config.py  test_main.py  test_validation.py
